--- a/KSP-WINUI2/Controls/TimelineControl.xaml
+++ b/KSP-WINUI2/Controls/TimelineControl.xaml
@@ -39,7 +39,7 @@
             </Grid>
             <ScrollViewer x:Name="SvContent" Grid.Row="1" Margin="5,0,5,5" Padding="20,0,20,0" MaxHeight="600">
                 <StackPanel>
-                    <TextBlock x:Name="TbContent" TextWrapping="Wrap" Margin="5,0,0,0"/>
+                    <RichTextBlock x:Name="RTbContent" TextWrapping="Wrap" Margin="5,0,0,0" IsTextSelectionEnabled="True"/>
                     <Grid Margin="5,10,5,0">
                         <Rectangle Stroke="LightGray"/>
                         <FlipView x:Name="FvMedia" Visibility="Collapsed" HorizontalAlignment="Center" VerticalAlignment="Center" Width="auto" Height="400" Margin="1" Tapped="OnMediaTapped" />
@@ -60,23 +60,26 @@
                 </Button>
             </StackPanel>
             <Frame x:Name="FrShareMargin" Grid.Row="3" Visibility="Collapsed"/>
-            <Grid x:Name="SpComments" Grid.Row="3" Height="55" Background="#FCFCFC" Visibility="Visible">
-                <Border BorderBrush="#F4F4F4" VerticalAlignment="Top" HorizontalAlignment="Stretch" BorderThickness="1"/>
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="8*"/>
-                        <ColumnDefinition Width="100"/>
-                    </Grid.ColumnDefinitions>
-                    <AutoSuggestBox x:Name="AsbAttachPhoto" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="30,0,0,0" QuerySubmitted="OnCommentAttatchmentTapped" PlaceholderText="댓글을 입력하세요.">
-                        <AutoSuggestBox.QueryIcon>
-                            <fa5:FontAwesome Icon="Solid_PhotoVideo" Foreground="#DDDDDD" PointerEntered="OnAttachPhotoPointerEntered" PointerExited="OnAttachPhotoPointerExited"/>
-                        </AutoSuggestBox.QueryIcon>
-                    </AutoSuggestBox>
-                    <Button Grid.Column="1" Margin="10,0,30,0" HorizontalAlignment="Stretch" Background="#E96A49">
-                        <TextBlock Text="전송" Foreground="White"/>
-                    </Button>
+            <StackPanel x:Name="SpComment" Grid.Row="3">
+                <Border x:Name="BdComments" BorderBrush="#F4F4F4" VerticalAlignment="Top" HorizontalAlignment="Stretch" BorderThickness="1"/>
+                <ScrollViewer x:Name="SvComments" MaxHeight="150" Background="#FCFCFC" Padding="30,5,30,5" Visibility="Collapsed">
+                    <StackPanel x:Name="SpComments"/>
+                </ScrollViewer>
+                <Grid Height="55" Background="#FCFCFC" Visibility="Visible">
+                    <Border BorderBrush="#F4F4F4" VerticalAlignment="Top" HorizontalAlignment="Stretch" BorderThickness="1"/>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="8*"/>
+                            <ColumnDefinition Width="100"/>
+                        </Grid.ColumnDefinitions>
+                        <Frame x:Name="FrComment" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="30,0,5,0">
+                        </Frame>
+                        <Button Grid.Column="1" Margin="10,0,30,0" HorizontalAlignment="Stretch" Background="#E96A49">
+                            <TextBlock Text="전송" Foreground="White"/>
+                        </Button>
+                    </Grid>
                 </Grid>
-            </Grid>
+            </StackPanel>
             <Border x:Name="BdShare" CornerRadius="10" BorderBrush="LightGray" Grid.RowSpan="4" BorderThickness="2" Visibility="Collapsed"/>
         </Grid>
     </Frame>
