--- a/KSP-WINUI2/Pages/LoginPage.xaml
+++ b/KSP-WINUI2/Pages/LoginPage.xaml
@@ -13,8 +13,8 @@
         <Frame x:Name="FrRoot">
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="300">
                 <TextBlock Text="카카오스토리 매니저+ 로그인" Margin="0,0,0,20" FontSize="22.5" FontWeight="Black" HorizontalAlignment="Center"/>
-                <TextBox x:Name="TbxLogin" PlaceholderText="이메일 주소"/>
-                <PasswordBox x:Name="PbxLogin" PlaceholderText="비밀번호" Margin="0,10,0,0"/>
+                <TextBox x:Name="TbxLogin" PlaceholderText="이메일 주소" KeyDown="OnEmailKeyDown"/>
+                <PasswordBox x:Name="PbxLogin" PlaceholderText="비밀번호" Margin="0,10,0,0" KeyDown="OnPasswordKeyDown"/>
                 <CheckBox x:Name="CbxAutoLogin" Content="로그인 정보 저장" Margin="0,5,0,0"/>
                 <muxc:ProgressBar x:Name="PbLogin" IsIndeterminate="True" Margin="0,0,0,-10" Visibility="Collapsed"/>
                 <Button x:Name="BtLogin" Content="로그인" HorizontalAlignment="Stretch" Margin="0,10,0,0" Click="OnLoginButtonClick"/>
