--- a/KSP-WINUI2/Pages/MainPage.xaml
+++ b/KSP-WINUI2/Pages/MainPage.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:fa5="using:FontAwesome5" xmlns:controls="using:KSP_WINUI2.Controls"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    muxc:BackdropMaterial.ApplyToRootOrPageBackground="True">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -49,7 +49,7 @@
                 </Button>
             </StackPanel>
         </Grid>
-        <Border BorderBrush="LightGray" BorderThickness="1" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Grid.ColumnSpan="2"/>
+        <Border BorderBrush="LightGray" BorderThickness="0.5" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Grid.ColumnSpan="2"/>
         <Frame x:Name="FrContent" Grid.Row="1"/>
         <Grid x:Name="GdOverlay" Grid.Row="1" Visibility="Collapsed">
             <Border Background="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0.25"/>
@@ -70,8 +70,8 @@
                     <TextBlock x:Name="TbName" Text="로딩중..." HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" Margin="10" VerticalAlignment="Center"/>
                 </StackPanel>
             </Grid>
-            <Border BorderBrush="LightGray" BorderThickness="1" VerticalAlignment="Stretch" HorizontalAlignment="Left" Grid.RowSpan="2"/>
-            <Border BorderBrush="LightGray" BorderThickness="1" VerticalAlignment="Bottom" HorizontalAlignment="Stretch"/>
+            <Border BorderBrush="LightGray" BorderThickness="0.5" VerticalAlignment="Stretch" HorizontalAlignment="Left" Grid.RowSpan="2"/>
+            <Border BorderBrush="LightGray" BorderThickness="0.5" VerticalAlignment="Bottom" HorizontalAlignment="Stretch"/>
             <Pivot Grid.Row="1">
                 <PivotItem Header="친구">
                     <Grid>
